--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel serve table.html",
+    "start": "parcel serve index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
